<resources>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="alert">Alert</string>
    <string name="map">Map</string>
    <string name="open_cases">Open</string>
    <string name="complete_cases">Complete</string>
    <string name="choose_location">Choose your location</string>
    <string name="my_forms">My Forms</string>
    <string name="logout">Logout</string>
    <string name="delete_saved_form">Delete Saved Form</string>
    <string name="get_blank_forms">Get Blank Form</string>
    <string name="raise_alarm">Raise Alarm</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="emergencynumber">Emergency Contacts</string>
    <string name="exitappmsg">Do you want to exit app ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preforms">Pre-Forms</string>
    <string name="create">Create</string>
    <string name="failuremsg">Unable to connect server</string>
    <string name="wrongname">UserName or Password is Incorrect</string>
    <string name="failurecase">Unable to log case</string>
    <string name="successcase">Case Successfully posted</string>
    <string name="register">Register</string>
    <string name="registering">Registering</string>
    <string name="crash_toast_text">Little Sister Crashed</string>
    <string name="crash_dialog_title">Little Sister Report</string>
    <string name="crash_dialog_text">Little Sister error</string>
    <string name="crash_dialog_comment_prompt">Comment here</string>
    <string name="crash_dialog_ok_toast">Ok！</string>
<string name="accept_location">Record Location</string>
<string name="accuracy">Accuracy</string>
<string name="activity_not_found">No activity found to handle: %s</string>
<string name="add_another">Add Group</string>
<string name="add_another_repeat">Add another \"%s\" group?</string>
<string name="add_more">Add more</string>
<string name="add_repeat">Add a new \"%s\" group?</string>
<string name="add_repeat_no">Do Not Add</string>
<string name="advance">forward to\nnext\nprompt</string>
<string name="altitude">Altitude</string>
<string name="app_name">Little Sister</string>
<string name="base_url">http://192.168.1.9:8080</string>
<string name="audio_file_error">No audio file was specified.</string>
<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
<string name="backup">back to\nprevious\nprompt</string>
<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
<string name="cancel">Cancel</string>
<string name="cancel_loading_form">Cancel</string>
<string name="cancel_location">Cancel</string>
<string name="cancel_saving_form">Cancel</string>
<string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as complete. It may be encrypted.</string>
<string name="capture_audio">Record Sound</string>
<string name="capture_image">Take Picture</string>
<string name="capture_video">Record Video</string>
<string name="change_language">Change Language</string>
<string name="change_server_url">Server URL</string>
<string name="change_username">KoBo Username</string>
<string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
<string name="clear_answer">Remove response</string>
<string name="clear_answer_ask">Remove This Response?</string>
<string name="clear_answer_no">Cancel</string>
<string name="completed_data">Complete (%s)</string>
<string name="data">Saved Forms</string>
<string name="data_saved_error">Sorry, form save failed!</string>
<string name="data_saved_ok">Form successfully saved!</string>
<string name="default_completed">Default to Finalized</string>
<string name="default_completed_summary">Mark form as finalized by default</string>
<string name="default_server_url">http://139.162.13.46:8001</string>
<string name="default_java_server_url">http://139.162.13.46:8080</string>
<string name="default_phython_server_url">http://139.162.13.46:8001</string>
<string name="delete_confirm">Delete %s form(s)?</string>
<string name="delete_file">Delete Selected</string>
<string name="delete_no">Do Not Delete</string>
<string name="delete_repeat">Remove group</string>
<string name="delete_repeat_ask">Remove This Group?</string>
<string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
<string name="delete_repeat_no">Cancel</string>
<string name="delete_yes">Delete Forms</string>
<string name="discard_answer">Remove response</string>
<string name="discard_group">Remove group</string>
<string name="download">Get Selected</string>
<string name="download_forms_result">Download Result</string>
<string name="downloading_data">Connecting to Server</string>
<string name="do_not_change">Cancel</string>
<string name="do_not_exit">Cancel</string>
<string name="do_not_save">Ignore Changes</string>
<string name="entering_repeat">Add Group</string>
<string name="entering_repeat_ask">Add New Group?</string>
<string name="enter_data">Fill Blank Form</string>
<string name="enter_data_button">Fill Blank Form</string>
<string name="enter_data_description">You are at the start of \"%s\". Swipe the screen as shown below to begin.</string>
<string name="error_occured">Error Occurred</string>
<string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
<string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
<string name="file_deleted_ok">%s form(s) successfully deleted!</string>
<string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
<string name="file_invalid">File: %s is invalid.</string>
<string name="file_missing">File: %s is missing.</string>
<string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
<string name="forms">Blank Forms</string>
<string name="getting_location">Loading Location</string>
<string name="get_barcode">Get Barcode</string>
<string name="get_forms">Get Blank Form</string>
<string name="get_location">Record Location</string>
<string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
<string name="invalid_answer_error">Sorry, this response is invalid!</string>
<string name="jump_to_beginning">Go To Start</string>
<string name="jump_to_end">Go To End</string>
<string name="jump_to_previous">Go Up</string>
<string name="latitude">Latitude</string>
<string name="leave_repeat_yes">Do Not Add</string>
<string name="leaving_repeat_ask">Add One More Group?</string>
<string name="list_failed_with_error">Form listing failed. %s.</string>
<string name="loading_form">Loading Form</string>
<string name="load_remote_form_error">Error Getting Form List</string>
<string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
<string name="location_provider">Using %1$s provider. Please wait for greater accuracy.</string>
<string name="location_accuracy">Accuracy is %1$s m</string>
<string name="longitude">Longitude</string>
<string name="main_menu">Main Menu</string>
<string name="main_menu_details">Based on the Open Data Kit&#8230;</string>
<string name="manage_files">Delete Saved Form</string>
<string name="mark_finished">Mark form as finalized</string>
<string name="noselect_error">Sorry, you have not selected any forms!</string>
<string name="no_connection">No network connection available</string>
<string name="no_items_display">Nothing available to display.</string>
<string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
<string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
<string name="ok">OK</string>
<string name="parse_error">Sorry, unable to parse form.</string>
<string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
<string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
<string name="play_audio">Play Sound</string>
<string name="play_video">Play Video</string>
<string name="please_wait">Please wait a few moments.</string>
<string name="please_wait_long">Please wait. This could take a few minutes.</string>
<string name="quit_application">Exit %s</string>
<string name="quit_entry">Save Form and Exit</string>
<string name="refresh">Refresh</string>
<string name="replace_barcode">Replace Barcode</string>
<string name="replace_location">Replace Location</string>
<string name="required_answer_error">Sorry, this response is required!</string>
<string name="review_data">Edit Saved Form</string>
<string name="review_data_button">Edit Saved Form</string>
<string name="saved_data">Incomplete (%s)</string>
<string name="save_all_answers">Save Form</string>
<string name="save_enter_data_description">You are at the end of \"%s\".</string>
<string name="saving_form">Saving Form</string>
<string name="sending_items">Sending %1$s of %2$s form(s)</string>
<string name="send_data">Send Finalized Form</string>
<string name="send_data_button">Send Finalized Form</string>
<string name="send_selected_data">Send Selected</string>
<string name="server_auth_credentials">Please enter username and password for server:\n%s</string>
<string name="server_requires_auth">Server Requires Authentication</string>
<string name="server_url">URL</string>
<string name="server_preferences">Server</string>
<string name="toggle_selected">Toggle All</string>
<string name="trigger">OK. Please continue.</string>
<string name="uploading_data">Sending Form</string>
<string name="url_error">Sorry, invalid URL!</string>
<string name="username">Username</string>
<string name="view_hierarchy">Go To Prompt</string>
<string name="open_data_kit">Open Data Kit</string>
<string name="general_preferences">General Settings</string>
<string name="click_to_web">Tap to visit http://kobotoolbox.org</string>
<string name="client">Client</string>
<string name="show_splash">Show Splash Screen</string>
<string name="show_splash_summary">Shows when application starts</string>
<string name="splash_path">Selected Splash Image</string>
<string name="default_splash_path">Default</string>
<string name="select_another_image">Select Another Image</string>
<string name="use_odk_default">Use Default Image</string>
<string name="change_splash_path">Change Image</string>
<string name="show_location">Show Location</string>
<string name="app_url">http://www.snehamumbai.org</string>
<string name="keep_changes">Save Changes</string>
<string name="go_to_location">Go to Location</string>
<string name="change_formlist_url">Form List Path (appended to Server URL)</string>
<string name="protocol">Server Platform</string>
<string name="change_protocol">Server Platform</string>
<string name="change_submission_url">Submission Path (appended to Server URL)</string>
<string name="formlist_url">Form List Path</string>
<string name="submission_url">Submission Path</string>
<string name="font_size">Text Font Size</string>
<string name="change_font_size">Text Font Size</string>
<string name="form_scan_starting">Scanning for forms&#8230;</string>
<string name="powered_by_odk">Powered by Open Data Kit</string>
<string name="default_odk_formlist">/kobo/formList</string>
<string name="default_odk_submission">/submission</string>
<string name="access_error">Error while accessing %s: </string>
<string name="manifest_server_error">Manifest reply does not report an OpenRosa version &#8212; bad server?</string>
<string name="root_element_error">Root element is not &lt;manifest\&gt; &#8212; was %s</string>
<string name="root_namespace_error">Root element Namespace is incorrect: %s</string>
</resources>