<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/langButton"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_margin="10dp"
        android:id="@+id/centerLayout"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="2"
            android:id="@+id/userIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_weight="0.1"
            android:id="@+id/userText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/user"/>
        <EditText
            android:layout_weight="1.9"
            android:id="@+id/userEditText"
            android:layout_marginLeft="10dp"
            android:layout_width="100dp"
            android:singleLine="true"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/userIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.1"
                android:id="@+id/passwordText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:text="@string/password"/>
            <EditText
                android:layout_weight="1.8"
                android:id="@+id/passwordEditText"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/submitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@+id/passwordLayout"
            android:layout_centerHorizontal="true"/>

        </RelativeLayout>
</RelativeLayout>